--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,69 +5,66 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{% block title %} Document {% endblock %}</title>
-	
-	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+	<!-- <link rel="stylesheet" href="https://bootswatch.com/3/flatly/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
 	{% block extrahead %}
 	{% endblock %}
 </head>
 <body>
-<div class="container">
+	
 	{% block navbar %}
-	<div class="bs-docs-section clearfix">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="bs-component">
-					<nav class="navbar navbar-default">
-						<div class="container-fluid">
-							<div class="navbar-header">
-								<a class="navbar-brand" href="#">El Respuesto</a>
-							</div>
-							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-								<ul class="nav navbar-nav">
-									<li class="dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Productos <span class="caret"></span></a>
-										<ul class="dropdown-menu" role="menu">
-											<li><a href="#">Registrar</a></li>
-											<li><a href="#">Listar</a></li>
-										</ul>
-									</li>
-									<li class="dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Movimientos<span class="caret"></span></a>
-										<ul class="dropdown-menu" role="menu">
-											<li><a href="#">Registrar</a></li>
-											<li><a href="#">Listar</a></li>
-										</ul>
-									</li>
-								</ul>
-								<ul class="nav navbar-nav navbar-right">
-									<li class="dropdown">
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Opciones<span class="caret"></span></a>
-										<ul class="dropdown-menu" role="menu">
-											<li><a href="#">Salir</a></li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</nav>
-				</div>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">El Repuesto</a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Productos <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="#">Registrar</a></li>
+							<li><a href="#">Listar</a></li>
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Movimientos <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="#">Registrar</a></li>
+							<li><a href="#">Listar</a></li>
+						</ul>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Opciones <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+						<li><a href="#">Salir</a></li>
+					</li>
+				</ul>
 			</div>
 		</div>
+	</nav>				
+	{% endblock%}
+	<div class="container">
+		{% block header %}
+		<h4> Este es el header del doc base</h4>
+		{% endblock%}
+
+		{% block content %}
+		<h5>Este es el contenido del doc base</h5>
+		{% endblock %}
+
+		{% block footer %}
+		<h2>este es el footer del doc base</h2>
+		{%endblock%}
 	</div>
-	{% endblock%}
-
-	{% block header %}
-	<h4> Este es el header del doc base</h4>
-	{% endblock%}
-
-	{% block content %}
-	<h5>Este es el contenido del doc base</h5>
-	{% endblock %}
-
-	{% block footer %}
-	<h2>este es el footer del doc base</h2>
-	{%endblock%}
-</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
