--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -22,15 +22,15 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">El Repuesto</a>
+				<a class="navbar-brand" href="{%url 'pagina:index'%}">El Repuesto</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Productos <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="#">Registrar</a></li>
-							<li><a href="#">Listar</a></li>
+							<li><a href="{%url 'pagina:producto_crear'%}">Registrar</a></li>
+							<li><a href="{%url 'pagina:producto_listar'%}">Listar</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
