--- a/templates/pagina/productoDelete.html
+++ b/templates/pagina/productoDelete.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %}
 
+{% block header%}
+{%endblock%}
+
 {% block content %}
 <form method="POST">
 	{% csrf_token %}
@@ -9,3 +12,7 @@
 </form>
 
 {% endblock %}
+
+{%block footer%}
+
+{%endblock%}
