--- a/templates/pagina/productoForm.html
+++ b/templates/pagina/productoForm.html
@@ -1,10 +1,18 @@
 {% extends 'base/base.html' %}
 
+
+{% block header%}
+{%endblock%}
+
 {% block content %}
 <form method="POST">
 	{% csrf_token %}
 	{{form.as_p}}
-	<button type="submit">Guardar</button>
+	<button type="submit" class="btn btn-warning">Guardar</button>
 </form>
 
 {% endblock %}
+
+{%block footer%}
+
+{%endblock%}
