--- a/templates/pagina/productoList.html
+++ b/templates/pagina/productoList.html
@@ -1,39 +1,48 @@
 {% extends 'base/base.html' %}
 
-{% block content %}
-
-	<table class="table table-striped table-hover ">
-		<thead>
-			<tr class="success">
-				<td> N° </td>
-				<td> Codigo  </td>
-				<td> Nombre </td>
-				<td> Tipo </td>
-				<td> Costo </td>
-				<td> Marca </td>
-				<td> Acción </td>
-			</tr>
-		</thead>
-		<tbody>
-			{% if object_list%}
-				{% for producto in object_list %}
-				<tr>
-					<td>{{producto.id}}</td>
-					<td>{{producto.codigo}}</td>
-					<td>{{producto.nombre}}</td>
-					<td>{{producto.tipo}}</td>
-					<td>{{producto.costo}}</td>
-					<td>{{producto.idMarca}}</td>
-					<td>
-						<a class="btn btn-primary btn-xs" href="{%url 'pagina:producto_editar' producto.id %}">Editar</a>
-						<a class="btn btn-danger btn-xs" href="{%url 'pagina:producto_eliminar' producto.id %}">Eliminar</a>
-					</td>
-				</tr>
-				{% endfor %}
-			{% else %}
-			<h1>No existen registros.</h1>	
-			{% endif %}
-		</tbody>
-	</table>
+{% block header%}
 
 {% endblock %}
+
+{% block content %}
+
+<table class="table table-striped table-hover ">
+	<thead>
+		<tr class="success">
+			<td> N° </td>
+			<td> Codigo  </td>
+			<td> Nombre </td>
+			<td> Tipo </td>
+			<td> Costo </td>
+			<td> Marca </td>
+			<td> Acción </td>
+		</tr>
+	</thead>
+	<tbody>
+		{% if object_list%}
+		{% for producto in object_list %}
+		<tr>
+			<td>{{producto.id}}</td>
+			<td>{{producto.codigo}}</td>
+			<td>{{producto.nombre}}</td>
+			<td>{{producto.tipo}}</td>
+			<td>{{producto.costo}}</td>
+			<td>{{producto.idMarca}}</td>
+			<td>
+				<a class="btn btn-primary btn-xs" href="{%url 'pagina:producto_editar' producto.id %}">Editar</a>
+				<a class="btn btn-danger btn-xs" href="{%url 'pagina:producto_eliminar' producto.id %}">Eliminar</a>
+			</td>
+		</tr>
+		{% endfor %}
+		{% else %}
+		<h1>No existen registros.</h1>	
+		{% endif %}
+	</tbody>
+</table>
+
+{% endblock %}
+
+{% block footer%}
+
+	<a href="{% url 'pagina:reporte_personas_pdf' %}" class="btn btn-warning">Descargar</a>
+{%endblock%}
