video 12. Generación de un reporte en formato PDF

--- a/templates/pagina/productoList.html
+++ b/templates/pagina/productoList.html
@@ -43,6 +43,5 @@
 {% endblock %}
 
 {% block footer%}
-
-	<a href="{% url 'pagina:reporte_personas_pdf' %}" class="btn btn-warning">Descargar</a>
+	<a href="{% url 'pagina:reporte_productos_pdf' %}" class="btn btn-warning">Descargar</a>
 {%endblock%}
