--- a/templates/pagina/productoList.html
+++ b/templates/pagina/productoList.html
@@ -2,6 +2,27 @@
 
 {% block header%}
 
+<div class="panel panel-default">
+	<div class="panel-body">
+		<form class="form-inline form-filtro">
+			<div class="btn-group">
+				<a href="#" class="btn btn-default">Marcas</a>
+				<a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					{%for marca in marcasContex%}
+					<li><a href="{%url 'pagina:producto_filtrar' marca.id%}">{{marca.nombre}}</a></li>
+					{%endfor%}
+				</ul>
+			</div>
+
+			<div class="form-group">
+				<a href="{% url 'pagina:producto_listar' %}" class="btn btn-warning">Limpiar</a>
+
+			</div>
+		</form>
+	</div>
+</div>
+
 {% endblock %}
 
 {% block content %}
@@ -43,5 +64,5 @@
 {% endblock %}
 
 {% block footer%}
-	<a href="{% url 'pagina:reporte_productos_pdf' %}" class="btn btn-warning">Descargar</a>
+<a href="{% url 'pagina:reporte_productos_pdf' %}" class="btn btn-warning">Descargar</a>
 {%endblock%}
